# it_college_bot

./: .gitignore  400 вопросов с ответами, которые должен знать Python-разработчик.md  bot.py  description.drawio  it_college.db  main.py  pyproject.toml  test.py
###/classes/: class_SingleSelection.py
###/keyboards/: class_Keyboards.py  class_Navigation.py
###/keyboards/general/: profile.json
###/keyboards/teachers/disciplines/: delete_discipline.json  disciplines.json  what_doing.json
###/keyboards/teachers/general/: main.json
###/keyboards/teachers/groups/: delete_group.json  groups.json  what_doing.json
###/messages/general/: empty_symbol.json  start.json
###/messages/teachers/disciplines/: add_discipline_name.json  add_discipline_shortname.json  delete_discipline.json  delete_success.json  discipline_found.json  (+3 more)
###/routers/discipline/: create_discipline.py  delete_discipline.py  discipline.py  select_discipline.py
###/routers/group/: create_group.py  delete_group.py  group.py  select_group.py
###/routers/start/: start.py
###/routers/student/: student.py
###/routers/teacher/: teacher.py
classes/: class_Service.py
database/: class_Database.py  models.py
dialogs/: class_AnswerDialog.py  class_AsyncInit.py  class_DisciplineDialog.py  class_GroupDialog.py  class_QuestDialog.py  class_StartDialog.py  class_StudentListDialog.py  class_TeacherDialog.py
exit_to_bot/: class_ExitToBot.py
functions/: clear_chat.py  load_json_file.py
source/: __init__.py  main_menu.py
states/: __init__.py  answers_stack.py  start_states.py  teacher_states.py
(+15 files in other folders)
