[project]
name = "it-college-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.19.0",
    "aiogram-dialog>=2.3.1",
    "aiogram-loguru>=0.1.3",
    "aiosmtplib>=4.0.0",
    "aiosqlite>=0.21.0",
    "dotenv>=0.9.9",
    "email-validator>=2.2.0",
    "icecream>=2.1.4",
    "sqlalchemy>=2.0.40",
]
